--- a/src/styles/Main.module.css
+++ b/src/styles/Main.module.css
@@ -13,6 +13,16 @@
   background-color: skyblue;
 }
 
+/* .bodyDiv {
+  background-color:aliceblue;
+  width: 100%;
+  height: 100%;
+} */
+
+/* .body {
+  background-color:aliceblue;
+} */
+
 /* .welcome {
   font-size: 3em;
 } */
