--- a/src/styles/Trips.module.css
+++ b/src/styles/Trips.module.css
@@ -14,3 +14,42 @@
   margin-right: 1em;
   float: right;
 }
+
+/* .tripListDiv {
+  margin-top: 0.5em;
+} */
+
+.tripDiv {
+  width: 80vw;
+  border-radius: 0.5em;
+  box-shadow: 0 0 0.5em;
+  /* border: 1px solid; */
+  margin: 1em auto 0 auto;
+}
+
+.dateDiv {
+  /* float: right; */
+  width: 100%;
+  padding-right: 0.25em;
+}
+
+.dateDiv span {
+  float:right;
+}
+
+.editDelDiv {
+  width: 100%;
+  padding-right: 0.25em;
+  /* float: right; */
+}
+
+.editDelSpan {
+  float:right;
+}
+
+.title {
+  font-size: 1.25em;
+  font-weight: 600;
+  padding-left: 0.25em;
+  padding-bottom: 2em;
+}
