--- a/src/styles/Trips.module.css
+++ b/src/styles/Trips.module.css
@@ -1,18 +1,22 @@
 .headerDiv {
-  background-color: skyblue;
+  background-color: #209cee;
 }
 
 .headerTitle {
   font-size: 2em;
   font-weight: 500;
   margin-left: 1em;
+  padding-top: 0.25em;
+  padding-bottom: 0.25em;
+  color: white;
   /* text-align: center; */
 }
 
 .headerUser {
-  font-size: 1.5em;
+  padding-top: 0.6em;
+  /* font-size: 1.5em; */
   margin-right: 1em;
-  float: right;
+  /* float: right; */
 }
 
 /* .tripListDiv {
