--- a/src/styles/Trips.module.css
+++ b/src/styles/Trips.module.css
@@ -1,5 +1,6 @@
 .headerDiv {
   background-color: #209cee;
+  
 }
 
 .headerTitle {
@@ -24,26 +25,33 @@
 } */
 
 .tripDiv {
-  width: 80vw;
+  width: 35em;
+  /* width: 80vw; */
+  margin-top: 1.25em;
   border-radius: 0.5em;
-  box-shadow: 0 0 0.5em;
+  /* box-shadow: 0 0 0.5em; */
   /* border: 1px solid; */
-  margin: 1em auto 0 auto;
+  /* margin: 1em auto 0 auto; */
 }
 
 .dateDiv {
   /* float: right; */
   width: 100%;
   padding-right: 0.25em;
+  color: white;
 }
 
 .dateDiv span {
   float:right;
+  /* margin-top: 5em; */
+  padding-top: 4.5em;
+  padding-right: 0.65em;
 }
 
 .editDelDiv {
   width: 100%;
   padding-right: 0.25em;
+  color: white;
   /* float: right; */
 }
 
@@ -52,8 +60,11 @@
 }
 
 .title {
-  font-size: 1.25em;
+  font-size: 1.4em;
+  text-transform: uppercase;
   font-weight: 600;
-  padding-left: 0.25em;
-  padding-bottom: 2em;
+  padding-left: 0.75em;
+  padding-bottom: 0.9em;
+  padding-top: 1.9em;
+  color: white;
 }
