--- a/src/styles/TripView.module.css
+++ b/src/styles/TripView.module.css
@@ -6,6 +6,6 @@
 }
 
 .dayButtonGroup {
-    padding-top: 2.5vh;
-    padding-left: 2.5vh;
+    /* padding-top: 2.5vh;
+    padding-left: 2.5vh; */
 }
