--- a/src/styles/TripView.module.css
+++ b/src/styles/TripView.module.css
@@ -9,3 +9,11 @@
     /* padding-top: 2.5vh;
     padding-left: 2.5vh; */
 }
+
+.editButtonGroup {
+    float: right;
+    padding-right: 1em;
+    padding-top: 0.5em;
+    height: 100%;
+    padding-bottom: 0.5em;
+  }
