--- a/src/styles/Trips.module.css
+++ b/src/styles/Trips.module.css
@@ -6,7 +6,7 @@
 .headerTitle {
   font-size: 2em;
   font-weight: 500;
-  margin-left: 1em;
+  /* margin-left: 1em; */
   padding-top: 0.25em;
   padding-bottom: 0.25em;
   color: white;
