--- a/src/styles/Trips.module.css
+++ b/src/styles/Trips.module.css
@@ -67,9 +67,9 @@
   font-size: 1.4em;
   text-transform: uppercase;
   font-weight: 600;
-  padding-left: 0.75em;
-  padding-bottom: 0.9em;
-  padding-top: 1.9em;
+  /* padding-left: 0.75em; */
+  /* padding-bottom: 0.9em; */
+  /* padding-top: 1.9em; */
   color: white;
 }
 
