--- a/src/styles/TripMemory.module.css
+++ b/src/styles/TripMemory.module.css
@@ -59,16 +59,12 @@
 }
 
 .imgScale {
-    margin-left: 0.5em;
+    margin: 0 0.5em;
 }
 
-@media screen and (width < 501px) {
+@media screen and (width < 601px) {
     .mapContainer {
         width: 90vw;
         height: 90vw;
     }
-
-    /* .imgContainer {
-        width: 90vw;
-    } */
 }
