--- a/src/styles/TripMemory.module.css
+++ b/src/styles/TripMemory.module.css
@@ -49,24 +49,37 @@
     margin: 2rem 0;
 }
 
-.mapContainer {
+/* .mapContainer {
     width: 50vw;
     height: 50vw;
 }
 
 .imgContainer {
     width: 50vw;
-}
+} */
 
 .imgScale {
     margin: 0 0.5em;
 }
 
-@media screen and (width < 601px) {
+@media screen and (width < 481px) {
     .mapContainer {
         width: 90vw;
         height: 90vw;
     }
 
-    
+    .imgContainer {
+        width: 90vw;
+    }
+}
+
+@media screen and ((width >= 481px) and (width < 769px)) {
+    .mapContainer {
+        width: 85vw;
+        height: 47.5vw;
+    }
+
+    .imgContainer {
+        width: 85vw;
+    }
 }
