--- a/src/styles/TripMemory.module.css
+++ b/src/styles/TripMemory.module.css
@@ -52,17 +52,17 @@
 /* .mapContainer {
     width: 50vw;
     height: 50vw;
-}
+} */
 
 .imgContainer {
-    width: 50vw;
-} */
+    width: 90vw;
+}
 
 .imgScale {
     margin: 0 0.5em;
 }
 
-@media screen and (width < 481px) {
+/* @media screen and (width < 481px) {
     .mapContainer {
         width: 90vw;
         height: 90vw;
@@ -71,9 +71,9 @@
     .imgContainer {
         width: 90vw;
     }
-}
+} */
 
-@media screen and ((width >= 481px) and (width < 769px)) {
+/* @media screen and ((width >= 481px) and (width < 769px)) {
     .mapContainer {
         width: 85vw;
         height: 47.5vw;
@@ -82,4 +82,4 @@
     .imgContainer {
         width: 85vw;
     }
-}
+} */
