--- a/src/styles/TripMemory.module.css
+++ b/src/styles/TripMemory.module.css
@@ -49,10 +49,10 @@
     margin: 2rem 0;
 }
 
-/* .mapContainer {
+.mapContainer {
     width: 50vw;
     height: 50vw;
-} */
+}
 
 .imgContainer {
     width: 90vw;
