--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -9,7 +9,7 @@
   top: 50%;
   -ms-transform: translateY(-50%);
   transform: translateY(-50%); */
-  padding: 0.5em;
+  margin: 0.5em;
   height: 100%;
 }
 
