--- a/src/styles/Trips.module.css
+++ b/src/styles/Trips.module.css
@@ -6,11 +6,13 @@
 .headerTitle {
   font-size: 2em;
   font-weight: 500;
+  padding: 0 0.25em;
   /* margin-left: 1em; */
   /* padding-top: 0.25em; */
   /* padding-bottom: 0.25em; */
   color: white;
-  /* text-align: center; */
+  line-height: normal;
+  text-align: center;
 }
 
 .headerUser {
