--- a/src/styles/Trips.module.css
+++ b/src/styles/Trips.module.css
@@ -69,6 +69,7 @@
   font-size: 1.4em;
   text-transform: uppercase;
   font-weight: 600;
+  padding-right: 0.9em;
   /* padding-left: 0.75em; */
   /* padding-bottom: 0.9em; */
   /* padding-top: 1.9em; */
